--- a/dokkie/src/main/resources/templates/event/event_details.html
+++ b/dokkie/src/main/resources/templates/event/event_details.html
@@ -39,7 +39,32 @@
         </ul>
     </div>
     <div class="card p-3 m-3">
-        {% PAYMENTS LIST %}
+        <div class="d-flex justify-content-between">
+            <h3>Current payments:</h3>
+            <a th:href="@{/payment/{id}/create (id = ${event.id()})}">
+            <button class="btn btn-success">new</button>
+            </a>
+        </div>
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Participant</th>
+                <th scope="col">Description</th>
+                <th scope="col">Amount</th>
+                <th scope="col">Date</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="payment : ${event.payments()}">
+                <th th:text="${payment.id()}" scope="row"></th>
+                <td th:text="${payment.user().username()}"></td>
+                <td th:text="${payment.description()}"></td>
+                <td><p th:text="${#numbers.formatDecimal(payment.amount(), 0, 'COMMA', 2, 'POINT')}"></p>EUR</td>
+                <td th:text="${#dates.format(payment.createdOn(), 'dd-MM-yyyy')}"></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
     <div class="card p-3 m-3">
         {% EVENT BALANCE %}
